# GC57-3P

./: Cargo.toml  LICENSE  README-Appendice-b.md  README-nota-personale.md  README.md
Python/: README.md
Python/doc/: README.md
Python/programmi/: GC573P_V102.py
Rust/: .gitignore  Cargo.toml  GC57_sicurezza.7z  GC57_sicurezza_V1_0_1.7z  LICENSE  Password.txt  README.md  analisi_db_sicurezza.py  database_sicurezza.txt
Rust/src/: main.rs
doc/: README.md
programmi/: GC57-3P.py  GC573PD_V101.py  GC573p_crea_database.py
src/: main.rs
