[package]
name = "gc57-3p-gui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gc57-3p-gui"
path = "src/main.rs"

[dependencies]
eframe = "0.33"
egui = "0.33"
rfd = "0.15"
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
aes-gcm = "0.10"
sha2 = { version = "0.10", features = ["oid"] }
hmac = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
rand = "0.8"
num-bigint = "0.4"
num-integer = "0.1"
num-traits = "0.2"
