[package]
name = "interfaccia_grafica"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.1"
eframe = "0.24"
egui = "0.24"
tokio = { version = "1", features = ["full"] }
aes = "0.8"
aes-gcm = "0.10"
cbc = "0.1"
cipher = "0.4"
hmac = "0.12"
sha2 = "0.10"
ring = "0.17"
num-bigint = "0.4"
num-traits = "0.2"
rfd = "0.14"
rand = "0.8"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "windef", "winnt", "fileapi", "winbase"] }